--- a/src/styles/AnimalList.css
+++ b/src/styles/AnimalList.css
@@ -91,6 +91,15 @@
   background-color: #f4fff4;
 } 
 
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
 @media (max-width: 768px) {
   .overlay {
     padding: 1rem;
