--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body, html, #root {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  height: 100%;
-  overflow: hidden;
+  min-height: 100vh;  
+  overflow-x: hidden;  
   box-sizing: border-box;
 }
